fixed success message; update user function name

--- a/async_user_pref_lang.ipynb
+++ b/async_user_pref_lang.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Z4z0gghUZXve"
       },
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "AE3ywDbhZXvg"
       },
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "Yt9Ia8CkZXvi"
       },
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "50Zpehw4wePr"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -81,7 +81,7 @@
         "  async with aiohttp.ClientSession() as client:\n",
         "\n",
         "    awaitables = [\n",
-        "        get_users(client=client, throttler=throttler, headers=headers, id=i)\n",
+        "        update_users(client=client, throttler=throttler, headers=headers, id=i)\n",
         "        for i in users['id']\n",
         "    ]\n",
         "\n",
@@ -90,13 +90,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "SAs6aEXyr0Lr"
       },
       "outputs": [],
       "source": [
-        "async def get_users(client, throttler, headers, id):\n",
+        "async def update_users(client, throttler, headers, id):\n",
         "  try:\n",
         "    resp = None\n",
         "    url = baseurl + '/' + id\n",
@@ -112,7 +112,7 @@
         "                        resp_text = await response.text()\n",
         "                        print(f'Failed to update user: {response.status} for {id} {resp_text}')\n",
         "                    else:\n",
-        "                        print('User updated successfully')\n",
+        "                        print(f'{id} User updated successfully')\n",
         "  except Exception as e:\n",
         "    print(f'{e} for {id}')\n",
         "  finally:\n",
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -133,20 +133,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "XrxEAyKL9JgP"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            " {'value': 'en', 'desc': 'English'} for 01234567\n",
-            "User updated successfully\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "await call_users(users, headers)"
       ]
@@ -174,7 +165,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.3"
+      "version": "3.11.5"
     },
     "orig_nbformat": 4
   },
